# CMakeLearning

./: README.md
hello/: CMakeLists.txt  hello.cpp
hello/libs/funcs/: util.cpp
hello/src/: TutorialConfig.h
